--- a/hws word/icons.qrc
+++ b/hws word/icons.qrc
@@ -25,5 +25,6 @@
         <file>icons/cursor.png</file>
         <file>icons/I.png</file>
         <file>icons/logo.ico</file>
+        <file>icons/find.png</file>
     </qresource>
 </RCC>
