--- a/hws word/mainwindow.ui
+++ b/hws word/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>808</width>
-    <height>658</height>
+    <width>814</width>
+    <height>613</height>
    </rect>
   </property>
   <property name="cursor">
@@ -59,6 +59,9 @@
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOn</enum>
       </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustToContents</enum>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
@@ -70,8 +73,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>792</width>
-         <height>560</height>
+         <width>798</width>
+         <height>515</height>
         </rect>
        </property>
        <property name="minimumSize">
@@ -80,13 +83,13 @@
          <height>250</height>
         </size>
        </property>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="label_text">
         <property name="geometry">
          <rect>
-          <x>3</x>
-          <y>1</y>
-          <width>851</width>
-          <height>491</height>
+          <x>0</x>
+          <y>0</y>
+          <width>811</width>
+          <height>591</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -102,7 +105,7 @@
          <bool>false</bool>
         </property>
        </widget>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="label_cursor">
         <property name="geometry">
          <rect>
           <x>110</x>
@@ -128,7 +131,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>808</width>
+     <width>814</width>
      <height>21</height>
     </rect>
    </property>
@@ -142,7 +145,6 @@
     <addaction name="actionSave_as"/>
     <addaction name="separator"/>
     <addaction name="actionPrint_P"/>
-    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuEdit_E">
     <property name="title">
@@ -175,7 +177,11 @@
    <addaction name="menuHelp_H"/>
    <addaction name="menuAbout_A"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -186,20 +192,15 @@
    <addaction name="actionOpen_O"/>
    <addaction name="actionSave_S"/>
    <addaction name="actionSave_as"/>
-   <addaction name="actionPrint_P"/>
-   <addaction name="actionExit"/>
    <addaction name="separator"/>
+   <addaction name="actionUndo_Z"/>
+   <addaction name="actionRedo_Y"/>
    <addaction name="actionCut_X"/>
    <addaction name="actionCopy_C"/>
    <addaction name="actionPaste_P"/>
-   <addaction name="actionUndo_Z"/>
-   <addaction name="actionRedo_Y"/>
    <addaction name="actionFind_F"/>
-   <addaction name="separator"/>
-   <addaction name="actionSelect_All_A"/>
-   <addaction name="actionDocs"/>
+   <addaction name="actionPrint_P"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionNew_N">
    <property name="icon">
     <iconset resource="icons.qrc">
@@ -237,17 +238,15 @@
    </property>
   </action>
   <action name="actionPrint_P">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/my_images/icons/print.png</normaloff>:/my_images/icons/print.png</iconset>
+   </property>
    <property name="text">
     <string>Print(&amp;P)</string>
    </property>
-  </action>
-  <action name="actionExit">
-   <property name="icon">
-    <iconset resource="icons.qrc">
-     <normaloff>:/my_images/icons/exit.png</normaloff>:/my_images/icons/exit.png</iconset>
-   </property>
-   <property name="text">
-    <string>Exit</string>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
    </property>
   </action>
   <action name="actionCut_X">
@@ -287,6 +286,9 @@
    </property>
   </action>
   <action name="actionUndo_Z">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="icons.qrc">
      <normaloff>:/my_images/icons/undo_256.png</normaloff>:/my_images/icons/undo_256.png</iconset>
@@ -311,6 +313,10 @@
    </property>
   </action>
   <action name="actionFind_F">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/my_images/icons/find.png</normaloff>:/my_images/icons/find.png</iconset>
+   </property>
    <property name="text">
     <string>Find(&amp;F)</string>
    </property>
@@ -321,7 +327,7 @@
   <action name="actionSelect_All_A">
    <property name="icon">
     <iconset resource="icons.qrc">
-     <normaloff>:/my_images/icons/changefont.png</normaloff>:/my_images/icons/changefont.png</iconset>
+     <normaloff>:/my_images/icons/select.png</normaloff>:/my_images/icons/select.png</iconset>
    </property>
    <property name="text">
     <string>Select All(&amp;A)</string>
@@ -340,11 +346,19 @@
    </property>
   </action>
   <action name="actionMiniword">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/my_images/icons/logo.ico</normaloff>:/my_images/icons/logo.ico</iconset>
+   </property>
    <property name="text">
     <string>Miniword</string>
    </property>
   </action>
   <action name="actionreplace_R">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/my_images/icons/replace.png</normaloff>:/my_images/icons/replace.png</iconset>
+   </property>
    <property name="text">
     <string>replace(&amp;R)</string>
    </property>
